--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
   <section class="py-5 bg-white">
   <div class="container">
     <div class="row align-items-center">
-      <!-- IMAGE COLUMN -->
       <div class="col-lg-6 text-center order-first order-lg-last mb-4 mb-lg-0">
         <img src="assets/images/Web Terminal Page Design1-landscape.png" class="img-fluid w-75 w-md-50 my-3"
  style="transform: rotate(-10deg);" alt="TON Terminal" />
@@ -63,7 +62,6 @@
     <h4 class="text-center fw-semibold mb-4">Get started from starter to pro level with training.</h4>
 
     <div class="position-relative">
-      <!-- Scrollable container -->
       <div id="cardCarousel" class="d-flex overflow-auto gap-3 scroll-snap-x pb-3 scroll-container">
         <!-- Card 1 -->
         <div class="card text-white flex-shrink-0 border-0 overflow-hidden"
@@ -75,7 +73,7 @@
     <p class="small mb-2">Training sessions on indices</p>
    <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span>  <!-- Add left margin -->
+  <span class="duration-text ms-3 small">Duration: 02 hr</span>  
 </div>
 
 
@@ -90,7 +88,7 @@
             <p class="small mb-2">Training sessions on indices</p>
             <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span>  <!-- Add left margin -->
+  <span class="duration-text ms-3 small">Duration: 02 hr</span> 
 </div>
 
           </div>
@@ -103,8 +101,7 @@
             <p class="small mb-2">Training sessions on indices</p>
             <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span>  <!-- Add left margin -->
-</div>
+  <span class="duration-text ms-3 small">Duration: 02 hr</span>  
 
           </div>
         </div>
@@ -141,7 +138,6 @@
   <section class="py-5 bg-white">
   <div class="container">
     <div class="row align-items-center">
-      <!-- Left side: Heading and text -->
       <div class="col-lg-8 mb-4 mb-lg-0">
         <h4 class="fw-bold">
           Navigating Volatility with<br class="d-none d-md-block" />
