--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <p class="small mb-2">Training sessions on indices</p>
    <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span>  
+  <span class="duration-text ms-3 small">Duration: 02 hr</span> 
 </div>
 
 
@@ -88,7 +88,7 @@
             <p class="small mb-2">Training sessions on indices</p>
             <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span> 
+  <span class="duration-text ms-3 small">Duration: 02 hr</span>  
 </div>
 
           </div>
@@ -101,7 +101,8 @@
             <p class="small mb-2">Training sessions on indices</p>
             <div class="d-flex justify-content-between align-items-center">
   <a href="#" class="btn btn-light btn-sm">Start Session</a>
-  <span class="duration-text ms-3 small">Duration: 02 hr</span>  
+  <span class="duration-text ms-3 small">Duration: 02 hr</span> 
+</div>
 
           </div>
         </div>
