--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
       <p class="mb-1 small">Trading is like music</p>
       <h5 class="fw-light">TIMING, RHYTHM, AND HARMONY TURN<br class="d-none d-md-block" />NOISE INTO A MASTERPIECE</h5>
       <div class="mt-3 d-flex flex-wrap gap-2">
-        <img src="assets/images/Image5.png" alt="S&P" height="24" />
-        <img src="assets/images/Image6.png" alt="Nasdaq" height="24" />
-        <img src="assets/images/Image7.png" alt="Nifty50" height="24" />
-        <img src="assets/images/Image8.png" alt="Sensex" height="24" />
+        <img src="assets/images/image5.png" alt="S&P" height="24" />
+        <img src="assets/images/image6.png" alt="Nasdaq" height="24" />
+        <img src="assets/images/image7.png" alt="Nifty50" height="24" />
+        <img src="assets/images/image8.png" alt="Sensex" height="24" />
       </div>
     </div>
   </section>
